--- a/Student_Score_Linear_Regression.ipynb
+++ b/Student_Score_Linear_Regression.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "a.Youtube:\n",
         "\n",
-        "b.Github: \n",
+        "b.Github: https://github.com/PallaviVedpathak/GRIP_TASK1_Student_Score_Linear_Regression1\n",
         "\n",
         "c.Dataset: http://bit.ly/w-data\n",
         "\n",
